--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Shared/submodule-sub"]
 	path = Shared/submodule-sub
-	url = git@github.com:MrScruffy04/submodule-sub.git
+	url = ../submodule-sub.git
